# X-REST_eXtended-Reality-Enhanced-Shared-Teleoperation

./: README.md
Unity3D/: filtered_point_cloud.txt  readme.md
Unity3D/Assets/: InstancedColorMaterial.mat  InstancedColorShader.shader  LatencyTest.cs  PointCloudSpheresFromMesh.cs  msgbrowser_settings.asset
Unity3D/Assets/AddressableAssetsData/: AddressableAssetSettings.asset  DefaultObject.asset
Unity3D/Assets/PointCloudData/: localFile.msgpack
Unity3D/Assets/Prefabs/: CameraImage.prefab  CommandMenu.prefab  ComputerShaderPointCloudTemplate.prefab  ComputerShaderPointCloudTemplateBig.prefab  Controller.prefab  CoordinateCalibration.prefab  Dot.prefab  EndEffectorController.prefab  Ground.prefab  HanoiA.prefab  HanoiB.prefab  HanoiC.prefab  HanoiGroup.prefab  HologramCollection.prefab  LandMarker.prefab  Master.prefab  PointCloudElemTemplate.prefab  PointCloudVisualization.prefab  ROSCommunication.prefab  Rizon.prefab  RizonVisual.prefab  Switch.prefab  XYZCoordinate.prefab
Unity3D/Assets/Resources/: ROSConnectionPrefab.prefab
Unity3D/Assets/Scenes/: SampleScene.unity
Unity3D/Assets/XR/: XRGeneralSettings.asset
Unity3D/Logs/: ApiUpdaterCheck.txt
Unity3D/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
Unity3D/UserSettings/: EditorUserSettings.asset  MixedRealityOpenXRRemotingSettings.asset
rizon_trac_ik/: CMakeLists.txt
rizon_trac_ik/src/: rizon_trac_ik.cpp
src/: README.md
src/flexiv/flexiv_cpp/: CMakeLists.txt  README.md  package.xml
src/flexiv/flexiv_cpp/flexiv_rdk/doc/html/: _data_8hpp.html  _data_8hpp__dep__incl.map  _data_8hpp__dep__incl.md5  _data_8hpp__incl.map  _data_8hpp__incl.md5  _data_8hpp_source.html  _exception_8hpp.html  _exception_8hpp__dep__incl.map  _exception_8hpp__dep__incl.md5  _exception_8hpp__incl.map  _exception_8hpp__incl.md5  _exception_8hpp_source.html  _gripper_8hpp.html  _gripper_8hpp__dep__incl.map  _gripper_8hpp__dep__incl.md5  _gripper_8hpp__incl.map  _gripper_8hpp__incl.md5  _gripper_8hpp_source.html  _log_8hpp.html  _log_8hpp__dep__incl.map  _log_8hpp__dep__incl.md5  _log_8hpp__incl.map  _log_8hpp__incl.md5  _log_8hpp_source.html  _mode_8hpp.html  _mode_8hpp__dep__incl.map  _mode_8hpp__dep__incl.md5  _mode_8hpp_source.html  _model_8hpp.html  _model_8hpp__dep__incl.map  _model_8hpp__dep__incl.md5  _model_8hpp__incl.map  _model_8hpp__incl.md5  _model_8hpp_source.html  _robot_8hpp.html  _robot_8hpp__dep__incl.map  _robot_8hpp__dep__incl.md5  _robot_8hpp__incl.map  _robot_8hpp__incl.md5  _robot_8hpp_source.html  (+136 more)
src/flexiv/flexiv_cpp/flexiv_rdk/doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+33 more)
src/flexiv/flexiv_cpp/flexiv_rdk/example_py/: intermediate1_non_realtime_joint_position_control.py
src/flexiv/flexiv_cpp/flexiv_rdk/resources/meshes/rizon4/visual/: link_7_with_tool.dae
src/flexiv/flexiv_cpp/src/: flexiv_mesh.cpp  flexiv_reconstruction.cpp  flexiv_robot.cpp  flexiv_test.cpp  flexiv_trac_ik.cpp  flexiv_unity.cpp  flexiv_unity_nrt.cpp  keyboard_control.cpp  robot_test.cpp  test_ros2.cpp  unity_decision_making.cpp
src/flexiv/flexiv_msgs/: CMakeLists.txt  package.xml
src/flexiv/flexiv_msgs/msg/: ClosestPoints.msg  DigitalInput.msg  DigitalOutput.msg  DigitalState.msg  FramePose.msg  HanoiGrab.msg  HanoiPose.msg  HanoiStates.msg  InteractiveGeometry.msg  InteractiveGeometryArray.msg  Marker.msg  MarkerSet.msg  ModeController.msg  RawPhone.msg  RigidBody.msg  RizonFrame.msg  RobotStates.msg
src/flexiv/flexiv_msgs/srv/: PlanExcution.srv  SetMode.srv  SpawnRizonVisual.srv
src/realsense-ros/: README.md
src/to_unity/: README.md
src/to_unity/to_unity_cpp/: CMakeLists.txt
src/to_unity/to_unity_cpp/launch/: rizon4_modified.urdf  rizon_ik.launch.py  rizon_ik_forward.launch.py  rizon_model.launch.py  ur3e.urdf  ur3e_ik.launch.py
src/to_unity/to_unity_cpp/src/: rizon_ik.cpp  rizon_ik_forward.cpp  rizon_model.cpp  ur3e_control.cpp
src/to_unity/to_unity_py/: package.xml  (+2 more)
utils/flexiv_3d_reconstruction/: .gitignore  .gitmodules  CMakeLists.txt  README.md
utils/flexiv_3d_reconstruction/cmake/: config.h.in  flexiv_3d_reconstruction-config.cmake.in
utils/flexiv_3d_reconstruction/cmake/tools/: FlexivBuildThirdparty.cmake  FlexivGitVersion.cmake  FlexivInstallLibrary.cmake  README.md  git_submodule_update_init.cmake  qnx_toolchain.cmake  set_default_build_type.cmake
utils/flexiv_3d_reconstruction/examples/: CMakeLists.txt  README.md  environment_reconstruction.cpp  environment_reconstruction.hpp  main.cpp  reconstruct_and_extract_point_cloud.cpp
utils/flexiv_3d_reconstruction/include/flexiv/reconstruction/: OnlineReconstruction.hpp  PropertyPanel.hpp
utils/flexiv_3d_reconstruction/resources/camera_configs/RealSense_D415/: default.json  hand.json  high_accuracy.json  high_density.json  medium_density.json
utils/flexiv_3d_reconstruction/resources/camera_configs/RealSense_D435/: default.json  hand.json  high_accuracy.json  high_density.json  medium_density.json
utils/flexiv_3d_reconstruction/scripts/: CMakeLists.txt  environment_reconstruction.cpp  environment_reconstruction.hpp  main.cpp
utils/flexiv_3d_reconstruction/src/: OnlineReconstruction.cpp  PropertyPanel.cpp
utils/rizon_ik_solver/: CMakeLists.txt  README.md
utils/rizon_ik_solver/src/: main.cpp  nlopt_ik.cpp  rizon_ik_solver.cpp  rizon_ik_solver.hpp
utils/rizon_kinematics/: CMakeLists.txt
utils/rizon_kinematics/src/: README.md  defaultSettings.json  main.cpp  rizon_kinematics.cpp  rizon_kinematics.hpp  tensor_utils.hpp
utils/rizon_trac_ik/: README.md
utils/xbox/: CMakeLists.txt  README.md
utils/xbox/src/: RizonXbox.hpp  XboxMonitor.hpp  main.cpp  test.cpp
(+309 files in other folders)
